--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Account</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -91,8 +91,13 @@
     <string name="string1">后台处理事件</string>
     <string name="string2">广播事件</string>
     <string name="string3">后台Service</string>
+    <string name="string8">GreenDao操作数据库例子</string>
 
-
-
+    <string name="string4">增加或更新记录</string>
+    <string name="string5">删记录</string>
+    <string name="string6">改记录</string>
+    <string name="string7">查记录</string>
+    <string name="string9">数据库操作失误！请检查</string>
+    <string name="string10">数据库操作结果将显示在此</string>
 
 </resources>
